<resources>
    <!-- MainActivity strings -->

    <string name="app_name">Acts</string>
    <string name="tab_text_1">Declension of names</string>
    <string name="tab_text_2">Age of car</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- DeclensionNameFragment strings -->

    <string name="declension_name_edittext">Enter full name</string>
    <string name="declension_name_texview_name">If result of declension is not satisfy you, try to applying next parameters:</string>
    <string name="declension_name_textview_sex">Select a gender:</string>
    <string name="declension_name_checkbox_fullname">Full name</string>
    <string name="declension_name_checkbox_male">Male</string>
    <string name="declension_name_checkbox_female">Female</string>
    <string name="declension_name_button_decline">Decline</string>
    
    <string name="declension_dialog_title">Declension result</string>
    <string name="no_internet_dialog_title">No internet connection</string>
    <string name="no_internet_dialog_message">No internet connection, please check settings in your device! Do You want open setting for enable internet connection?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    
    <string name="toast_declension_name_no_entered_name">You are not enter name!</string>
    <string name="toast_declension_name_copied_to_clipboard">Copied to clipboard:\u0020</string>
    <string name="toast_declension_name_error_copy">Error copy to clipboard</string>

    <!-- AgeCarFragment strings-->

    <string name="age_car_text_view_text">0.0</string>
    <string name="age_car_button">How old car</string>
    <string name="age_car_month">Month</string>
    <string name="age_car_year">Year</string>
    <string name="toast_age_car_no_entered_text">Please, enter the month and year</string>
    <string name="toast_age_car_contains_dot">Please, enter integer values</string>
    <string name="toast_age_car_wrong_month">Please, enter month between 1 and 12</string>
    <string name="toast_age_car_wrong_year">Please, enter the real year</string>

    <!-- MorpherResponse strings -->

    <string name="vidminok_naz">Nazyvnyj:\u0020</string>
    <string name="vidminok_rod">Rodovyj:\u0020</string>
    <string name="vidminok_dav">Davalnyj:\u0020</string>
    <string name="vidminok_zn">Znahidnyj:\u0020</string>
    <string name="vidminok_or">Orudnyj:\u0020</string>
    <string name="vidminok_mis">Mistseyj:\u0020</string>
    <string name="vidminok_kl">Klychnyj:\u0020</string>
    
    <!--Preferences strings-->

    <string name="app_settings">Settings</string>

    <string name="pref_category_general">General</string>

    <string name="pref_enable_history_title">Enable history</string>
    <string name="pref_enable_history_summary">Save history of declension</string>

    <string name="pref_use_token_title">Use token</string>
    <string name="pref_use_token_summary">Use token for morpher.ru</string>


    <string name="hello_world">Hello world!</string>
</resources>
