<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sstanislavsky.acts.AgeCarFragment">

    <TextView
        android:id="@+id/ageCarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/age_car_text_view_text"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ageCarTextInputLayoutMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/ageCarTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageCarTextView">

        <EditText
            android:id="@+id/ageCarEditTextMonth"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:hint="@string/age_car_month"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ageCarTextInputLayoutYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/ageCarTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageCarTextView">

        <EditText
            android:id="@+id/ageCarEditTextYear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:hint="@string/age_car_year"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ageCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/age_car_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageCarTextInputLayoutYear"/>
</android.support.constraint.ConstraintLayout>